Refactor backend patterns and clean up frontend tests